--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Stranger</title>
 <link href="style.css" rel="stylesheet">
 </head>
-<body>>
+<body>
 
   <div class="container">
     <div class="gallery">
