--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
   <div class="container">
     <div class="gallery">
-     <div class="img-box"><h3>#</h3></div> 
-     <div class="img-box"><h3>#</h3></div> 
-     <div class="img-box"><h3>#</h3></div>
+     <div class="img-box"><h3>Since When?</h3></div> 
+     <div class="img-box"><h3>Until Now</h3></div> 
+     <div class="img-box"><h3>For You!</h3></div>
     </div>  
   </div>
 
