--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 
+  <h1>Princess</h1>
+  <p>Don't cry okay? JK😁</p>
+
   <div class="container">
     <div class="gallery">
      <div class="img-box"><h3>Since When?</h3></div> 
