--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <div class="container">
     <h1>Princess</h1>
-    <p>Don't cry okay? JK😁</p>
+    <br><p>Don't cry okay? JK😁</p>
     <div class="gallery">
      <div class="img-box"><h3>Since When?</h3></div> 
      <div class="img-box"><h3>Until Now</h3></div> 
