--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 </head>
 <body>
   <div class="container">
+    <div class="text">
     <h1>Princess</h1>
-    <br><p>Don't cry okay? JK😁</p>
+    <p>Don't cry okay? JK😁</p>
+    </div>  
     <div class="gallery">
      <div class="img-box"><h3>Since When?</h3></div> 
      <div class="img-box"><h3>Until Now</h3></div> 
