--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
   <div class="container">
     <div class="text">
-    <h1>Princess</h1>
-    <p>Don't cry okay? JK😁</p>
+    <h1>Aaliyah</h1>
+    <p>Note: Navigate using the cursor and click<br>the text inside the picture.</p>
     </div>  
     <div class="gallery">
      <div class="img-box"><h3>Since When?</h3></div> 
