--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <div class="container">
     <div class="text">
     <h1>Aaliyah</h1>
-    <p>Note: Navigate using the cursor and click<br>the text inside the picture.</p>
+    <p>Oi! Princess, how are you?</p>
     </div>  
     <div class="gallery">
      <div class="img-box"><h3>Since When?</h3></div> 
