--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class="text">
     <h1>Aaliyah</h1>
     <p>Oi! How are you?</p>
+    <p>Note: Use the cursor to point the image and<br>click the text inside it.</p>
     </div>  
     <div class="gallery">
      <div class="img-box"><h3>Since When?</h3></div> 
