--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Note: Use the cursor to point the image and<br>click the text inside it.</p>
     </div>  
     <div class="gallery">
-     <div class="img-box"><h3>Since When?</h3></div> 
+     <div class="img-box"><h3><a href="#">Since When?</a></h3></div> 
      <div class="img-box"><h3>Until Now</h3></div> 
      <div class="img-box"><h3>For You!</h3></div>
     </div>  
