--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </div>  
     <div class="gallery">
      <div class="img-box"><h3><a href="#">Since When?</a></h3></div> 
-     <div class="img-box"><h3>Until Now</h3></div> 
-     <div class="img-box"><h3>For You!</h3></div>
+     <div class="img-box"><h3><a href="#">Until Now</a></h3></div> 
+     <div class="img-box"><h3><a href="#">For You!</a></h3></div>
     </div>  
   </div>
 </body>
