--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Stranger</title>
 <link href="style.css" rel="stylesheet">
+<link rel="shortcut icon" type="x-icon" href="">
 </head>
 <body>
   <div class="container">
