--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Stranger</title>
 <link href="style.css" rel="stylesheet">
-<link rel="shortcut icon" type="x-icon" href="">
+<link rel="shortcut icon" type="x-icon" href="https://raw.githubusercontent.com/Jag4nshi/stranger/main/heart.png">
 </head>
 <body>
   <div class="container">
