--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
   <div class="container">
     <div class="text">
-    <h1>Aaliyah</h1>
-    <p>Oi! How are you?</p>
+    <h1>Good day,</h1>
+    <p>Miss Aaliyah</p>
     <p>Note: Use the cursor to point the image and<br>click the text inside it.</p>
     </div>  
     <div class="gallery">
