--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>Note: Use the cursor to point the image and<br>click the text inside it.</p>
     </div>  
     <div class="gallery">
-     <div class="img-box"><h3><a href="#">Since When?</a></h3></div> 
+     <div class="img-box"><h3><a href="https://iamfreeman-06.github.io/since-when/">Since When?</a></h3></div> 
      <div class="img-box"><h3><a href="#">Until Now</a></h3></div> 
      <div class="img-box"><h3><a href="#">For You!</a></h3></div>
     </div>  
